--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angularx-social-login": "^1.2.6",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "mapbox-gl": "^0.54.0",
     "node-gyp": "^4.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
